--- a/index.html
+++ b/index.html
@@ -2,72 +2,27 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>Rock Paper Scissors</title>
+    <meta charset="utf-8">
+    <title>Rock Paper Scissors</title>
 </head>
 
 <body>
 
-  <script>
+    <h1>ROCK PAPER SCISSORS</h1>
+    <h2>Click a button to play against the computer. Best of 5.</h2>
+    <h3>Round <span id="round-number">1</span></h3>
 
-    function computerPlay() {
-        let computerChoice = Math.floor(Math.random() * 3);
-        if (computerChoice === 0) {
-            return "rock";
-        } else if (computerChoice === 1) {
-            return "paper";
-        } else if (computerChoice === 2) {
-            return "scissors";
-        }
-    }
+    <button type="button" id="rock">Rock</button>
+    <button type="button" id="paper">Paper</button>
+    <button type="button" id="scissors">Scissors</button>
 
-    function playRound(playerSelection, computerSelection) {
-        playerSelection = playerSelection.toLowerCase();
-        if (playerSelection == computerSelection) {
-            return "Draw!";
-        } else if ((playerSelection == "rock") && (computerSelection == "paper")) {
-            return "You Lose! Paper beats Rock";
-        } else if ((playerSelection == "rock") && (computerSelection == "scissors")) {
-            return "You Win! Rock beats Scissors";
-        } else if ((playerSelection == "paper") && (computerSelection == "rock")) {
-            return "You Win! Paper beats Rock";
-        } else if ((playerSelection == "paper") && (computerSelection == "scissors")) {
-            return "You Lose! Scissors beats Paper";
-        } else if ((playerSelection == "scissors") && (computerSelection == "rock")) {
-            return "You Lose! Rock beats Scissors";
-        }  else if ((playerSelection == "scissors") && (computerSelection == "paper")) {
-            return "You Win! Scissors beats Paper";
-        } else {
-            return "You didn't enter 'rock', 'paper', or 'scissors'";
-        }
-    }
+    <div id="results"></div>
+    <div id="score">
+        <span id="user-score">0</span> - 
+        <span id="cpu-score">0</span> - 
+        <span id="draw-score">0</span></div>
 
-    function game() {
-        let round;
-        let wins = 0;
-        let losses = 0;
-        let draws = 0;
-
-        for (round = 1; round <= 5; round++) {
-            let playerSelection = prompt("Enter 'rock, 'paper', or 'scissors'");
-            let computerSelection = computerPlay();
-            console.log(playRound(playerSelection, computerSelection));
-            let result = playRound(playerSelection, computerSelection);
-            if (result.includes("Win")) {
-                wins += 1;
-            } else if (result.includes("Lose")) {
-                losses += 1;
-            } else {
-                draws += 1;
-            }
-        }
-
-        console.log("Final Score: You - " + wins + " , Computer - " + losses + " , Draws - " + draws);
-    }
-
-    game();
-
-  </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
